--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             </ol>          
         </article>
     </section> 
-    <!-- content - end -->
-    <!-- footer - start -->
+    <!-- recipe end -->
+    <!-- footer start -->
     <footer style="text-align: left;">
         <strong style="color:chocolate ;font-family: monospace;font-size:x-large;">Afiyet olsun...</strong>
         <h4>
